--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,29 @@
-flask
-python-dotenv
-requests
-authlib
-six
+astroid==2.3.3
+Authlib==0.13
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+cryptography==2.8
+Flask==1.1.1
+get==2019.4.13
+idna==2.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+post==2019.4.13
+public==2019.4.13
+pycparser==2.19
+pycurl==7.43.0.4
+pylint==2.4.4
+python-dotenv==0.10.5
+query-string==2019.4.13
+requests==2.22.0
+six==1.14.0
+typed-ast==1.4.1
+urllib3==1.25.7
+Werkzeug==0.16.0
+wrapt==1.11.2
